# guji

./: .gitignore  DUAL_ARM_PICK_PLACE.md  README.md  TODO.md  arm_monitor.py  dual_arm_controller.py  dual_arm_pick_place.py  gemini.txt  requirements.txt  rm_joint_reader.py  teach_record.py  文件结构说明
config/: camera.yaml  navigation.yaml  system.yaml
doc/: todo.txt  相关命令.txt  项目描述.txt
docs/: NAVIGATION.md  SIMULATION.md
guji_beta_v0/: DUAL_ARM_PICK_PLACE.md  dual_arm_pick_place.py  gemini.txt  package.xml  setup.py
guji_beta_v0/config/: poses.yaml
guji_beta_v0/docker/: Dockerfile.sim  docker-compose.yml
guji_beta_v0/nodes/: aruco_detector.py  tf_broadcaster.py
launch/: vision_pipeline.launch.py
nodes/: agv_navigator.py  aruco_detector.py  camera_bridge.py  gazebo_arm_adapter.py  tf_broadcaster.py
rm_pick_place_tutorial/config/: poses.yaml  system.yaml
rm_pick_place_tutorial/docs/: GETTING_STARTED.md
rm_pick_place_tutorial/scripts/: 01_basic_test.py  02_camera_test.py  03_aruco_test.py  04_tf_test.py  05_single_arm_test.py
robot_run/: 08_aruco_relative_teach.py  09_hand_eye_calibrate.py  1.py  10.py  11_gripper_pick_position_sweep_test.py  11_test.py  2.py  4_safe_single_arm_movej_test.py  5_right_arm_trajectory_player.py  6_left_arm_trajectory_player.py  7.py  8_aruco_relative_teach_enhanced.py  README.md  arm_monitor.py  dual_arm_controller.py  liftup.txt  teach_record.py  tf_broadcaster.py
ros2_ws/src/: README.md  README_CN.md  具身双臂升降ROS2话题服务功能列表.md
ros2_ws/src/ros2_agv_robot/: README.md  (+2 more)
ros2_ws/src/ros2_realsense2/realsense2_description/: CMakeLists.txt
ros2_ws/src/ros2_realsense2/realsense2_description/launch/: view_model.launch.py
ros2_ws/src/ros2_rm_robot/dual_rm_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_rm_robot/dual_rm_gazebo/config/: dual_rm_65b_gazebo.urdf.xacro  dual_rm_65b_rmg24_gripper_gazebo.urdf.xacro  dual_rm_75b_gazebo.urdf.xacro  dual_rm_75b_rmg24_gripper_gazebo.urdf.xacro
ros2_ws/src/ros2_rm_robot/dual_rm_gazebo/launch/: dual_rm_65b_gazebo.launch.py  dual_rm_65b_rmg24_gripper_gazebo.launch.py  dual_rm_75b_gazebo.launch.py  dual_rm_75b_rmg24_gripper_gazebo.launch.py
ros2_ws/src/ros2_rm_robot/dual_rm_gazebo/src/: mimic_joint_plugin.cpp
ros2_ws/src/ros2_rm_robot/dual_rm_moveit_demo/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_rm_robot/dual_rm_moveit_demo/launch/: rm_65_moveit2_fk.launch.py  rm_65_moveit2_ik.launch.py  rm_75_moveit2_fk.launch.py  rm_75_moveit2_ik.launch.py
ros2_ws/src/ros2_rm_robot/dual_rm_moveit_demo/src/: moveit2_fk_demo.cpp  moveit2_ik_demo.cpp  moveit2_ik_demo0.cpp
ros2_ws/src/ros2_total_demo/: CMakeLists.txt  README.md
ros2_ws/src/ros2_total_demo/.marscode/: deviceInfo.json
ros2_ws/src/ros2_total_demo/config/: config.yaml
ros2_ws/src/ros2_total_demo/include/ros2_total_demo/: dual_arm.h  total.h
ros2_ws/src/ros2_total_demo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/ros2_total_demo/install/ros2_total_demo/include/ros2_total_demo/msg/: object_pose.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_introspection_c__visibility_control.h
ros2_ws/src/ros2_total_demo/install/ros2_total_demo/include/ros2_total_demo/msg/detail/: object_pose__functions.c  object_pose__struct.h  object_pose__struct.hpp  object_pose__traits.hpp
ros2_ws/src/ros2_total_demo/install/ros2_total_demo/lib/ros2_total_demo/: catch2object_65_aoyi_agv.py  shu_demo.py  total_demo_node
ros2_ws/src/ros2_total_demo/install/ros2_total_demo/lib/ros2_total_demo/config/: config.yaml
ros2_ws/src/ros2_total_demo/install/ros2_total_demo/share/ament_index/resource_index/package_run_dependencies/: ros2_total_demo
ros2_ws/src/ros2_total_demo/install/ros2_total_demo/share/ament_index/resource_index/parent_prefix_path/: ros2_total_demo
ros2_ws/src/ros2_total_demo/install/ros2_total_demo/share/ros2_total_demo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/ros2_total_demo/install/ros2_total_demo/share/ros2_total_demo/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ros2_total_demoConfig.cmake  ros2_total_demo__rosidl_generator_cExport-noconfig.cmake  ros2_total_demo__rosidl_generator_cExport.cmake  ros2_total_demo__rosidl_typesupport_cExport.cmake  ros2_total_demo__rosidl_typesupport_cppExport-noconfig.cmake  ros2_total_demo__rosidl_typesupport_introspection_cExport.cmake  ros2_total_demo__rosidl_typesupport_introspection_cppExport.cmake
ros2_ws/src/ros2_total_demo/install/ros2_total_demo/share/ros2_total_demo/msg/: ObjectPose.idl
ros2_ws/src/ros2_total_demo/install/ros2_total_demo/share/ros2_total_demo/scripts/: 1.py  aoyi_hand.py  camera_0.py  camera_1.py  catch2object_65_aoyi_agv.py  catch2object_65_gripper_agv.py  realsense_camera_0.py  realsense_camera_2.py
ros2_ws/src/ros2_total_demo/launch/: start_65_agv.launch.py  total_demo.launch.py
ros2_ws/src/ros2_total_demo/scripts/: catch2object_65_aoyi_agv.py  catch2object_65_gripper_agv.py  detect_object.py  realsense_camera_1.py  shu_demo.py
ros2_ws/src/ros2_total_demo/src/: dual_arm.cpp  total_demo_node.cpp
scripts/: sim_start.sh
srv/: DetectAruco.srv
tmp/: 123888.txt  2.py  3.py  ARUCO_TRACKER_README.md  DEPLOYMENT_CHECKLIST.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  README_V2.md  VERSION_2_0_UPDATE.md  aruco_tracker.py  base_frame_transform_guide.py  camera_config_example.yaml  quickstart.py  trajectory_player.py  verify_config.py
workspace/aruco_pose_validation/: README.md  aruco_pose_validation.py
workspace/demo_pick_place/: README.md  run_demo.py
workspace/force_collision_monitor/: README.md  now_topic.txt  run_force_monitor.py
workspace/ros2_navigation_topic_test/src/woosh_nav_feedback/: README.md  package.xml  setup.cfg  setup.py
workspace/ros2_navigation_topic_test/src/woosh_nav_feedback/launch/: exec_task_feedback.launch.py
workspace/ros2_navigation_topic_test/src/woosh_nav_feedback/woosh_nav_feedback/: exec_task_feedback_node.py
(+202 files in other folders)
